fix: Solve Javassist unboxing